--- a/hmmm.html
+++ b/hmmm.html
@@ -14,7 +14,7 @@
     </body>
     <iframe width="1000 " height="600" src="https://www.youtube.com/embed/nbBeoReu12E">
     </iframe>
-    <iframe width="1000 " height="600" src="https://player.twitch.tv/?channel=OfficialAndyPyro&parent=localhost">
+    <iframe width="1000 " height="600" src="https://player.twitch.tv/?channel=OfficialAndyPyro&parent=https://karret500.github.io/">
     </iframe>
 
 
