--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </body>
     <iframe width="1000 " height="600" src="https://www.youtube.com/embed/nbBeoReu12E">
     </iframe>
+</iframe>
+<iframe width="1000 " height="600" src="https://player.twitch.tv/?channel=OfficialAndyPyro&parent=https://karret500.github.io">
+</iframe>
 
 
 </body>
