--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <iframe width="1000 " height="600" src="https://www.youtube.com/embed/nbBeoReu12E">
     </iframe>
 </iframe>
-<iframe width="1000 " height="600" src="https://player.twitch.tv/?channel=OfficialAndyPyro&parent=https://github.com/Karret500">
+<iframe width="1000 " height="600" src="https://player.twitch.tv/?channel=OfficialAndyPyro&parent=https://karret500.github.io/stuff/">
 </iframe>
 
 
